--- a/DaggerheartCreator/src/main/resources/application.properties
+++ b/DaggerheartCreator/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.sql.init.mode=always
 
