bux fixes, Issues with class id-s

--- a/DaggerheartCreator/src/main/resources/application.properties
+++ b/DaggerheartCreator/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=DaggerheartCreator
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.sql.init.mode=always
+
 
